--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
   <h1>Namaste React Assignment</h1>
   <div id="root">
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./App.js"> </script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+    
   </div>
-
+  <script type="module" src="./App.js"> </script>
 
 
   <!-- <script>
